Fri Apr  2 07:31:38 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (make_hostent): fix memory leak, based on
	  the patch from HORIKAWA Hisashi <vzw00011@nifty.ne.jp>.

Thu Apr  1 22:55:33 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb: Allow rdoc comments in
	  =begin rdoc/=end

	* lib/rdoc/parsers/parse_rb.rb: Fix problem with comment in
	  top-level method being taken as file comment.

Thu Apr  1 22:55:04 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_options.rb: Fix undefined variable warning.

Thu Apr  1 19:58:37 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/soap/mapping/{factory.rb,registry.rb}: fixed illegal mapped URI
	  object with soap/marshal.
	  added URIFactory class for URI mapping.  BasetypeFactory checks
	  instance_variables when original mapping is not allowed (ivar must
	  be empty).  Instance of URI have instance_variables but it must be 
	  llowed whenever original mapping is allowed or not.

Wed Mar 31 19:06:23 2004  Tanaka Akira  <akr@m17n.org>

	* time.c (year_leap_p): new function.
	  (timegm_noleapsecond): ditto.
	  (search_time_t): use timegm_noleapsecond instead of
	  mktime for first guess.

Wed Mar 31 12:05:17 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (DelegateClass): define internal methods of the
	  result class, but not metaclass of the caller.  [ruby-talk:96156]

	* intern.h: provide proper prototypes.  [ruby-core:02724]

	* ruby.h: missing.h is now prerequisite to intern.h.

Wed Mar 31 11:17:16 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_pack): raises RangeError if uv is out of UTF8 value
	  range.  [ruby-dev:23281]

	* io.c (rb_io_binmode): stdio buffer should be empty when calling
	  IO#binmode.  [ruby-talk:96155]

Tue Mar 30 20:25:34 2004  Tanaka Akira  <akr@m17n.org>

	* time.c (search_time_t): limit guess range by mktime if it is
	  available.  [ruby-dev:23274]
