@@ -1,5 +1,8 @@
 Fri Apr  2 07:31:38 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
+	* ext/socket/socket.c: mistakingly removed do_not_reverse_lookup.
+	  [ruby-dev:39475]
+
 	* ext/socket/socket.c (make_hostent): fix memory leak, based on
 	  the patch from HORIKAWA Hisashi <vzw00011@nifty.ne.jp>.
 
